--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Andrei pacuraru
-subtitle: Director of Photography
+title: Andrei Pacuraru
+subtitle: cinematographer
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -23,8 +23,12 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
-twitter_username: jekyllrb
-github_username:  jekyll
+imdb: name/nm5499550/
+instagram: andreipacuraru.dop
+vimeo: andreipacuraru
+youtube: UCqi5odScKbUd5RpyCdV-dHQ
+behance: andreipacuraru
+linkedin: andrei-pacuraru-5294798b/
 
 # Collections
 # Add .md files for each collection item in collection subfolders
