--- a/_config.yml
+++ b/_config.yml
@@ -17,18 +17,14 @@ title: Andrei Pacuraru
 subtitle: cinematographer
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+    cinematographer based in London
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 imdb: name/nm5499550/
 instagram: andreipacuraru.dop
 vimeo: andreipacuraru
-youtube: UCqi5odScKbUd5RpyCdV-dHQ
 behance: andreipacuraru
-linkedin: andrei-pacuraru-5294798b/
 
 # Collections
 # Add .md files for each collection item in collection subfolders
@@ -36,10 +32,13 @@ collections_dir: videos
 collections:
     narrative:
         output: true
+        permalink: /narrative/:path/
     commercial:
         output: true
+        permalink: /commercial/:path/
     music:
         output: true
+        permalink: /music/:path/
 
 # Specify default template for collections
 defaults:
